# drone_race

./: Cargo.toml  LICENSE  README.md  specification.md
src/: game_rules.rs  home_set.rs  home_ui.rs  input.rs  main.rs  pc_status.rs
src/home/: home_set.rs  home_ui.rs  mod.rs
src/pc_status/: cal_button.rs  mod.rs  next_scene.rs  pc_status.rs
src/playscene/: drone.rs  drone_cal.rs  drone_control.rs  main_camera.rs  mod.rs  playscene_setup.rs  system.rs
