[package]
name = "drone_race"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.18.0"
sysinfo = "0.37.2"
# bevy_rapier3d = "0.33.0" # Removed due to incompatibility with Bevy 0.18.0 (Custom Physics used instead)
