[package]
name = "drone_race"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.18.0"
sysinfo = "0.37.2"
# bevy_rapier3d = { version = "0.32",default-features = false,features = ["bevy-0-18", "debug-render-3d"]}
